Fixed map force scroll on small screens

--- a/UI/parcels/map.css
+++ b/UI/parcels/map.css
@@ -2,5 +2,5 @@
     height: 400px;
     width: 100%;
     overflow-x: scroll;
-    min-width: 430px;
+    min-width: 340px;
 }
